WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
166300
Web Inspector: Address failures under LayoutTests/inspector/debugger/stepping
https://bugs.webkit.org/show_bug.cgi?id=166300
Summary
Web Inspector: Address failures under LayoutTests/inspector/debugger/stepping
Joseph Pecoraro
Reported
2016-12-20 21:00:40 PST
Summary: Address failures under LayoutTests/inspector/debugger/stepping When running these tests with --force I've seen some consistent failures in a few places. Steps to Reproduce: 1. $ run-webkit-tests LayoutTests/inspector/debugger/stepping --force --iterations=5 => Failures Notes: - Looks like stepping past the end of a program is causing a pause in later executed code but that should have resumed - Some numbers need to be updated.
Attachments
[PATCH] Proposed Fix
(3.50 KB, patch)
2016-12-20 21:17 PST
,
Joseph Pecoraro
bburg
: review+
bburg
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2016-12-20 21:17:14 PST
Created
attachment 297578
[details]
[PATCH] Proposed Fix
Blaze Burg
Comment 2
2016-12-21 10:45:25 PST
Comment on
attachment 297578
[details]
[PATCH] Proposed Fix View in context:
https://bugs.webkit.org/attachment.cgi?id=297578&action=review
r=me
> LayoutTests/ChangeLog:8 > + * inspector/debugger/stepping/stepping-classes-expected.txt:
Should we unskip this test?
> LayoutTests/ChangeLog:9 > + Rebasline these results to new column values.
Speling
> Source/JavaScriptCore/ChangeLog:10 > + When continuing clear states that would have had us pause again.
continuing,
> Source/JavaScriptCore/ChangeLog:14 > + When resuming after becoming idle be sure to clear Debugger state.
idle,
> Source/JavaScriptCore/inspector/agents/InspectorDebuggerAgent.cpp:793 > + m_scriptDebugServer.continueProgram(); > m_frontendDispatcher->resumed();
Hmm, in what conditions was this bug user-visible, stepping past the last step into an idle state?
Joseph Pecoraro
Comment 3
2017-01-03 12:07:05 PST
> > Source/JavaScriptCore/inspector/agents/InspectorDebuggerAgent.cpp:793 > > + m_scriptDebugServer.continueProgram(); > > m_frontendDispatcher->resumed(); > > Hmm, in what conditions was this bug user-visible, stepping past the last > step into an idle state?
Correct. Though I wasn't always seeing this locally I certainly was in the tests.
Joseph Pecoraro
Comment 4
2017-01-03 14:33:01 PST
<
https://trac.webkit.org/changeset/210251
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug