Web Inspector: Address failures under LayoutTests/inspector/debugger/stepping https://bugs.webkit.org/show_bug.cgi?id=166300

Reviewed by Brian Burg.

Source/JavaScriptCore:

* debugger/Debugger.cpp:
(JSC::Debugger::continueProgram):
When continuing, clear states that would have had us pause again.

* inspector/agents/InspectorDebuggerAgent.cpp:
(Inspector::InspectorDebuggerAgent::didBecomeIdle):
When resuming after becoming idle, be sure to clear Debugger state.

LayoutTests:

* inspector/debugger/stepping/stepping-classes-expected.txt:
Rebaseline these results to new column values.

Canonical link: https://commits.webkit.org/183808@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@210251 268f45cc-cd09-0410-ab3c-d52691b4dbfc