Source/JavaScriptCore/inspector/agents/InspectorDebuggerAgent.cpp
@@ -787,8 +787,11 @@ void InspectorDebuggerAgent::didBecomeIdle()
 {
     m_registeredIdleCallback = false;
 
-    if (m_conditionToDispatchResumed == ShouldDispatchResumed::WhenIdle)
+    if (m_conditionToDispatchResumed == ShouldDispatchResumed::WhenIdle) {
+        cancelPauseOnNextStatement();
+        m_scriptDebugServer.continueProgram();
         m_frontendDispatcher->resumed();
+    }
 
     m_conditionToDispatchResumed = ShouldDispatchResumed::No;
 
